--- a/package.json
+++ b/package.json
@@ -1,16 +1,50 @@
 {
-  "name": "week5-009",
+  "name": "week-6-node-sq012-pod-j-macclare",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
+    "set-node-env": "set NODE_ENV=test",
+    "test": "yarn run set-node-env && jest",
+    "migrate-up": "sequelize db:migrate",
+    "migrate-down": "sequelize db:migrate:undo:all",
+    "migrate-down-up": "sequelize db:migrate:undo:all && sequelize db:migrate"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.14",
+    "@types/http-errors": "^2.0.1",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.11.9",
+    "@types/sequelize": "^4.28.14",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "cors": "^2.8.5",
+    "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
+    "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "i": "^0.3.7",
+    "joi": "^17.6.4",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.25.3",
+    "sequelize-typescript": "^2.1.5",
+    "sqlite3": "^5.1.2"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/multer": "^1.4.7",
+    "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.5.2",
+    "typescript": "^4.8.4"
   }
 }
