--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "@types/node": "^18.11.9",
     "@types/sequelize": "^4.28.14",
     "bcryptjs": "^2.4.3",
+    "connect-session-sequelize": "^7.1.5",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "i": "^0.3.7",
     "joi": "^17.6.4",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
@@ -42,7 +45,9 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
+    "@types/express-session": "^1.17.5",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/method-override": "^0.0.32",
     "@types/multer": "^1.4.7",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.2",
